MORO werkt half nu

--- a/Final Assignment EPA1361/MORO_POGING_TWEE.ipynb
+++ b/Final Assignment EPA1361/MORO_POGING_TWEE.ipynb
@@ -1,13 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Choice of robustness metrics:\n",
+    "| Robustness metric \t | value \t |\n",
+    "|:-------------------:|:-------:|\n",
+    "|   test          \t   | 0    \t  |\n",
+    "|          \t          |    \t    |\n",
+    "|          \t          |    \t    |"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-13T16:21:16.204532400Z",
-     "start_time": "2023-06-13T16:21:14.234160400Z"
+     "end_time": "2023-06-14T09:01:32.597627300Z",
+     "start_time": "2023-06-14T09:01:30.869683700Z"
     }
    },
    "outputs": [],
@@ -40,46 +54,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\beren\\AppData\\Local\\Temp\\ipykernel_15580\\4046386692.py:1: DtypeWarning: Columns (52) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  results = pd.read_csv(r'generated_datasets\\Open_exploration_500s_100p.csv', compression='gzip',on_bad_lines='skip')\n"
-     ]
+     "data": {
+      "text/plain": "<Logger EMA (DEBUG)>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [],
+   "source": [
+    "dike_model, planning_steps = get_model_for_problem_formulation(5)\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T16:24:54.486415200Z",
-     "start_time": "2023-06-13T16:24:52.547022900Z"
+     "end_time": "2023-06-14T09:01:36.508200100Z",
+     "start_time": "2023-06-14T09:01:35.693600500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   experiments.csv    A.1_Bmax  A.1_Brate  A.1_pfail    A.2_Bmax  A.2_Brate   \n0            103.0  126.761790       10.0   0.480237  286.206356        1.5  \\\n1             77.0  174.536130        1.0   0.514238  140.234977       10.0   \n2            104.0  347.401620        1.0   0.788641  340.740728        1.5   \n3             67.0  243.821032        1.0   0.301965  110.680584        1.5   \n4            107.0  254.885236       10.0   0.382175   64.608617        1.0   \n\n   A.2_pfail    A.3_Bmax  A.3_Brate  A.3_pfail  ...  A.4_DikeIncrease 0   \n0   0.209962  235.418035        1.0   0.867331  ...                 8.0  \\\n1   0.017645   44.285252        1.5   0.955095  ...                 8.0   \n2   0.189081   82.164102       10.0   0.304170  ...                 8.0   \n3   0.247839  326.319987        1.0   0.897078  ...                 8.0   \n4   0.387761  275.928361        1.0   0.138295  ...                 8.0   \n\n   A.4_DikeIncrease 1  A.4_DikeIncrease 2  A.5_DikeIncrease 0   \n0                 5.0                 6.0                10.0  \\\n1                 5.0                 6.0                10.0   \n2                 5.0                 6.0                10.0   \n3                 5.0                 6.0                10.0   \n4                 5.0                 6.0                10.0   \n\n   A.5_DikeIncrease 1  A.5_DikeIncrease 2  EWS_DaysToThreat  scenario  policy   \n0                 4.0                 1.0               0.0     100.0     0.0  \\\n1                 4.0                 1.0               0.0     101.0     0.0   \n2                 4.0                 1.0               0.0     102.0     0.0   \n3                 4.0                 1.0               0.0     103.0     0.0   \n4                 4.0                 1.0               0.0     104.0     0.0   \n\n      model  \n0  dikesnet  \n1  dikesnet  \n2  dikesnet  \n3  dikesnet  \n4  dikesnet  \n\n[5 rows x 53 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>experiments.csv</th>\n      <th>A.1_Bmax</th>\n      <th>A.1_Brate</th>\n      <th>A.1_pfail</th>\n      <th>A.2_Bmax</th>\n      <th>A.2_Brate</th>\n      <th>A.2_pfail</th>\n      <th>A.3_Bmax</th>\n      <th>A.3_Brate</th>\n      <th>A.3_pfail</th>\n      <th>...</th>\n      <th>A.4_DikeIncrease 0</th>\n      <th>A.4_DikeIncrease 1</th>\n      <th>A.4_DikeIncrease 2</th>\n      <th>A.5_DikeIncrease 0</th>\n      <th>A.5_DikeIncrease 1</th>\n      <th>A.5_DikeIncrease 2</th>\n      <th>EWS_DaysToThreat</th>\n      <th>scenario</th>\n      <th>policy</th>\n      <th>model</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>103.0</td>\n      <td>126.761790</td>\n      <td>10.0</td>\n      <td>0.480237</td>\n      <td>286.206356</td>\n      <td>1.5</td>\n      <td>0.209962</td>\n      <td>235.418035</td>\n      <td>1.0</td>\n      <td>0.867331</td>\n      <td>...</td>\n      <td>8.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>10.0</td>\n      <td>4.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>100.0</td>\n      <td>0.0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>77.0</td>\n      <td>174.536130</td>\n      <td>1.0</td>\n      <td>0.514238</td>\n      <td>140.234977</td>\n      <td>10.0</td>\n      <td>0.017645</td>\n      <td>44.285252</td>\n      <td>1.5</td>\n      <td>0.955095</td>\n      <td>...</td>\n      <td>8.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>10.0</td>\n      <td>4.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>101.0</td>\n      <td>0.0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>104.0</td>\n      <td>347.401620</td>\n      <td>1.0</td>\n      <td>0.788641</td>\n      <td>340.740728</td>\n      <td>1.5</td>\n      <td>0.189081</td>\n      <td>82.164102</td>\n      <td>10.0</td>\n      <td>0.304170</td>\n      <td>...</td>\n      <td>8.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>10.0</td>\n      <td>4.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>102.0</td>\n      <td>0.0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>67.0</td>\n      <td>243.821032</td>\n      <td>1.0</td>\n      <td>0.301965</td>\n      <td>110.680584</td>\n      <td>1.5</td>\n      <td>0.247839</td>\n      <td>326.319987</td>\n      <td>1.0</td>\n      <td>0.897078</td>\n      <td>...</td>\n      <td>8.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>10.0</td>\n      <td>4.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>103.0</td>\n      <td>0.0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>107.0</td>\n      <td>254.885236</td>\n      <td>10.0</td>\n      <td>0.382175</td>\n      <td>64.608617</td>\n      <td>1.0</td>\n      <td>0.387761</td>\n      <td>275.928361</td>\n      <td>1.0</td>\n      <td>0.138295</td>\n      <td>...</td>\n      <td>8.0</td>\n      <td>5.0</td>\n      <td>6.0</td>\n      <td>10.0</td>\n      <td>4.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>104.0</td>\n      <td>0.0</td>\n      <td>dikesnet</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 53 columns</p>\n</div>"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# List the names of vars to make `robustness_functions` a bit more read-able\n",
+    "var_list_damage = ['A.1_Expected Annual Damage',\n",
+    "                   'A.2_Expected Annual Damage',\n",
+    "                   'A.3_Expected Annual Damage',\n",
+    "                   'A.4_Expected Annual Damage',\n",
+    "                   'A.5_Expected Annual Damage',]\n",
+    "var_list_deaths = ['A.1_Expected Number of Deaths',\n",
+    "                   'A.2_Expected Number of Deaths',\n",
+    "                   'A.3_Expected Number of Deaths',\n",
+    "                   'A.4_Expected Number of Deaths',\n",
+    "                   'A.5_Expected Number of Deaths',]\n",
+    "var_list_dike = ['A.1_Dike Investment Costs',\n",
+    "                 'A.2_Dike Investment Costs',\n",
+    "                 'A.3_Dike Investment Costs',\n",
+    "                 'A.4_Dike Investment Costs',\n",
+    "                 'A.5_Dike Investment Costs',]\n",
+    "var_list_rfr = ['RfR Total Costs',]\n",
+    "var_list_evac = ['Expected Evacuation Costs',]"
    ],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T16:25:00.883512500Z",
-     "start_time": "2023-06-13T16:25:00.852617200Z"
+     "end_time": "2023-06-14T09:01:37.549678200Z",
+     "start_time": "2023-06-14T09:01:37.538599200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "def sum_sum_sum(*data):\n",
+    "    sumsumsum = sum(sum(sum(data)))\n",
+    "\n",
+    "    mean = np.mean(sumsumsum)\n",
+    "    iqr = sp.stats.iqr(sumsumsum) + mean * 0.005\n",
+    "    result = mean + iqr\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# robustness metrics\n",
+    "maximize = ScalarOutcome.MAXIMIZE\n",
+    "minimize = ScalarOutcome.MINIMIZE\n",
+    "\n",
+    "# These functions need to only return one score value...\n",
+    "robustness_functions = [\n",
+    "    ScalarOutcome('Damage Score', variable_name=var_list_damage,\n",
+    "                  function=sum_sum_sum, kind=minimize, expected_range=(0, 4e16)),\n",
+    "    ScalarOutcome('Deaths Score', variable_name=var_list_deaths,\n",
+    "                  function=sum_sum_sum, kind=minimize, expected_range=(0, 8.5e19)),\n",
+    "    ScalarOutcome('Dike Invest Score', variable_name=var_list_dike,\n",
+    "                  function=sum_sum_sum, kind=minimize, expected_range=(1e18, 1.3e7)),\n",
+    "    ScalarOutcome(\"RfR Invest Score\", kind=minimize, variable_name=\"RfR Total Costs\", function=sum_sum_sum),\n",
+    "    ScalarOutcome(\"Evac Score\", kind=minimize, variable_name=\"Expected Evacuation Costs\", function=sum_sum_sum),\n",
+    "]\n",
+    "\n",
+    "constraints = [\n",
+    "    Constraint()\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-14T09:09:07.750521300Z",
+     "start_time": "2023-06-14T09:09:07.730438500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started with 12 workers\n",
+      "  2%|█                                         | 5/200 [00:12<08:17,  2.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112790238.16708945 563951.1908354473\n",
+      "0.020874262862093176 0.00010437131431046589\n",
+      "6799603726.300705 33998018.63150352\n",
+      "6062000000.0 30310000.0\n",
+      "7756.5065218566015 38.78253260928301\n",
+      "14964097.452866822 74820.48726433411\n",
+      "0.0012325041313132755 6.162520656566377e-06\n",
+      "9411974141.233093 47059870.70616547\n",
+      "12996000000.0 64980000.0\n",
+      "1489.1048254493414 7.445524127246707\n",
+      "162512471.69085583 812562.3584542791\n",
+      "0.025148261108202077 0.0001257413055410104\n",
+      "7910344530.817875 39551722.65408938\n",
+      "7260000000.0 36300000.0\n",
+      "13057.89164696927 65.28945823484635\n",
+      "214022713.7406583 1070113.5687032915\n",
+      "0.19508086771298122 0.0009754043385649062\n",
+      "7879866945.239641 39399334.726198204\n",
+      "9701000000.0 48505000.0\n",
+      "0.0 0.0\n",
+      "176775294.9862554 883876.4749312771\n",
+      "0.02525271274772862 0.0001262635637386431\n",
+      "8905336493.451618 44526682.46725809\n",
+      "15174000000.0 75870000.0\n",
+      "14640.679566350716 73.20339783175358\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ema_workbench.em_framework.optimization import EpsilonProgress\n",
+    "from ema_workbench.em_framework.evaluators import BaseEvaluator\n",
+    "\n",
+    "# general input\n",
+    "n_scenarios = 10\n",
+    "scenarios = sample_uncertainties(dike_model, n_scenarios)\n",
+    "nfe = 200 #make this large\n",
+    "\n",
+    "BaseEvaluator.reporting_frequency = 0.1\n",
+    "\n",
+    "epsilons = [0.05, ]*len(robustness_functions)\n",
+    "\n",
+    "# Record the run time\n",
+    "\n",
+    "# Run MORO\n",
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "    results, convergence = evaluator.robust_optimize(robustness_functions,\n",
+    "                                                     scenarios=scenarios,\n",
+    "                                                     nfe=nfe,\n",
+    "                                                     epsilons=epsilons,\n",
+    "                                                     convergence=[\n",
+    "                                                         EpsilonProgress()],\n",
+    "                                                     population_size=5,\n",
+    "                                                     )\n",
+    "\n",
+    "# Write the results so this step can be skipped when doing multiple analyzes\n",
+    "with open(r'generated_datasets/initial_Pareto_policies.pkl', 'wb') as file_pi:\n",
+    "    pickle.dump(results, file_pi)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-14T09:09:09.582869Z"
     }
    }
   },
@@ -87,7 +236,33 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "results"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Extract the levers for each Pareto policy\n",
+    "policies = []\n",
+    "for row in range(results.shape[0]):\n",
+    "    policies.append(\n",
+    "        # Do not include the damage scores\n",
+    "        Policy(name=row, **results.iloc[row, :-5].to_dict())\n",
+    "    )\n",
+    "\n",
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "    results = evaluator.perform_experiments(scenarios=50, policies=policies)\n",
+    "\n",
+    "# Write the results so this step can be skipped when doing multiple analyzes\n",
+    "with open('Outcomes/epsilon_results.pkl', 'wb') as file_pi:\n",
+    "    pickle.dump(results, file_pi)"
+   ],
    "metadata": {
     "collapsed": false
    }
