--- a/Final Assignment EPA1361/MOEA.ipynb
+++ b/Final Assignment EPA1361/MOEA.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:29:16.166011Z",
-     "start_time": "2023-06-13T15:29:16.144217500Z"
+     "end_time": "2023-06-14T07:21:37.184333Z",
+     "start_time": "2023-06-14T07:21:35.602230200Z"
     }
    },
    "outputs": [],
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
-    "dike_model, steps = get_model_for_problem_formulation(2)\n",
+    "dike_model, steps = get_model_for_problem_formulation(3)\n",
     "\n",
     "reference_values = {\n",
     "    \"Bmax\": 175,\n",
@@ -52,8 +52,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:29:16.435865200Z",
-     "start_time": "2023-06-13T15:29:16.151495100Z"
+     "end_time": "2023-06-14T07:21:37.713116300Z",
+     "start_time": "2023-06-14T07:21:37.187303Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      A.0_ID flood wave shape    A.1_Bmax A.1_Brate  A.1_pfail    A.2_Bmax   \n7814                      121   79.809637       1.5   0.281881   42.204818  \\\n5198                       47   96.878635       1.5   0.273276  160.626328   \n4510                       52  106.333721       1.5   0.065023  278.244890   \n2877                        4   66.832707       1.5   0.312293  213.166290   \n9506                       62  199.176836      10.0   0.288931  213.188879   \n7479                      112  327.272292      10.0   0.289465  125.518278   \n1743                       30   86.350369      10.0   0.335409  288.036646   \n7315                      108  146.861837       1.0   0.148782   91.705527   \n1372                       34  252.868765       1.5   0.262775  265.463986   \n7364                       24   58.642644       1.0   0.037845  185.655644   \n289                        70  197.096770      10.0   0.252586   69.331413   \n883                        83   77.130935       1.0   0.166324  281.123280   \n1115                       53  232.342171       1.5   0.249825  321.757109   \n6332                        8  138.049692       1.0   0.314651   52.593727   \n5737                       70   51.803194      10.0   0.075696  242.636258   \n3717                       21   84.614611       1.0   0.066478  217.339972   \n6010                      107  104.599177       1.5   0.317021  275.635281   \n9477                       26   39.641304      10.0   0.120284  221.244279   \n6345                       60  208.979170       1.0   0.311363  152.424017   \n5212                        4   38.894802       1.0   0.217896  305.787260   \n\n     A.2_Brate  A.2_pfail    A.3_Bmax A.3_Brate  A.3_pfail    A.4_Bmax   \n7814      10.0   0.047893  328.172062       1.5   0.108396   75.800637  \\\n5198       1.5   0.873002  171.120247      10.0   0.079841  246.662080   \n4510       1.0   0.082515  252.936810       1.5   0.004640  101.008001   \n2877       1.5   0.751208  183.526621       1.5   0.084941  156.817236   \n9506       1.5   0.184611  206.624896       1.0   0.070740   73.915249   \n7479       1.0   0.920706   49.262084       1.5   0.012735  288.479819   \n1743      10.0   0.041854  311.295368       1.0   0.135261  251.362939   \n7315       1.5   0.711324  179.084747       1.5   0.013742   99.304109   \n1372       1.5   0.312144   37.171323       1.0   0.048181  106.291560   \n7364       1.0   0.110597  221.863326       1.5   0.032804  184.541291   \n289        1.5   0.058690  212.910460      10.0   0.060958  181.971337   \n883       10.0   0.184962   86.018319      10.0   0.038257   48.134439   \n1115       1.0   0.301171  136.806062      10.0   0.051209   64.039738   \n6332      10.0   0.055881  132.569962      10.0   0.077455  169.000110   \n5737       1.0   0.131857  165.839924       1.5   0.048100  156.404035   \n3717      10.0   0.127096  148.901504       1.0   0.023936  212.096278   \n6010      10.0   0.314082   51.756099      10.0   0.117578  208.009388   \n9477      10.0   0.841325   37.977455       1.5   0.054879  197.420341   \n6345       1.0   0.060033  133.695068       1.5   0.126220  154.049900   \n5212      10.0   0.861681  312.490398      10.0   0.043868  220.829157   \n\n     A.4_Brate  A.4_pfail    A.5_Bmax A.5_Brate  A.5_pfail  \n7814       1.0   0.350802  289.570799       1.0   0.469859  \n5198      10.0   0.339688   81.898248       1.5   0.396386  \n4510       1.0   0.121572  259.202951       1.0   0.555751  \n2877       1.5   0.187636  293.077559       1.5   0.657235  \n9506       1.0   0.314750  276.605635       1.5   0.845614  \n7479      10.0   0.186480  273.075785       1.5   0.576559  \n1743       1.0   0.144942  260.806412       1.5   0.583583  \n7315      10.0   0.143116   62.944983       1.5   0.491779  \n1372       1.0   0.699638  297.452015      10.0   0.458814  \n7364       1.0   0.101445  193.858837       1.5   0.225699  \n289       10.0   0.734759   56.513201       1.5   0.284995  \n883        1.0   0.706323  153.631194      10.0   0.371517  \n1115       1.5   0.246502  182.500865       1.0   0.182183  \n6332       1.0   0.049896  236.854187       1.5   0.387366  \n5737       1.0   0.047120   31.166800       1.5   0.254321  \n3717       1.5   0.497041  316.851747       1.5   0.602498  \n6010      10.0   0.386564   94.171545       1.5   0.163802  \n9477       1.0   0.635644  228.639747      10.0   0.423909  \n6345       1.5   0.588456  270.396117       1.0   0.498202  \n5212       1.0   0.968652   95.176427      10.0   0.881263  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A.0_ID flood wave shape</th>\n      <th>A.1_Bmax</th>\n      <th>A.1_Brate</th>\n      <th>A.1_pfail</th>\n      <th>A.2_Bmax</th>\n      <th>A.2_Brate</th>\n      <th>A.2_pfail</th>\n      <th>A.3_Bmax</th>\n      <th>A.3_Brate</th>\n      <th>A.3_pfail</th>\n      <th>A.4_Bmax</th>\n      <th>A.4_Brate</th>\n      <th>A.4_pfail</th>\n      <th>A.5_Bmax</th>\n      <th>A.5_Brate</th>\n      <th>A.5_pfail</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7814</th>\n      <td>121</td>\n      <td>79.809637</td>\n      <td>1.5</td>\n      <td>0.281881</td>\n      <td>42.204818</td>\n      <td>10.0</td>\n      <td>0.047893</td>\n      <td>328.172062</td>\n      <td>1.5</td>\n      <td>0.108396</td>\n      <td>75.800637</td>\n      <td>1.0</td>\n      <td>0.350802</td>\n      <td>289.570799</td>\n      <td>1.0</td>\n      <td>0.469859</td>\n    </tr>\n    <tr>\n      <th>5198</th>\n      <td>47</td>\n      <td>96.878635</td>\n      <td>1.5</td>\n      <td>0.273276</td>\n      <td>160.626328</td>\n      <td>1.5</td>\n      <td>0.873002</td>\n      <td>171.120247</td>\n      <td>10.0</td>\n      <td>0.079841</td>\n      <td>246.662080</td>\n      <td>10.0</td>\n      <td>0.339688</td>\n      <td>81.898248</td>\n      <td>1.5</td>\n      <td>0.396386</td>\n    </tr>\n    <tr>\n      <th>4510</th>\n      <td>52</td>\n      <td>106.333721</td>\n      <td>1.5</td>\n      <td>0.065023</td>\n      <td>278.244890</td>\n      <td>1.0</td>\n      <td>0.082515</td>\n      <td>252.936810</td>\n      <td>1.5</td>\n      <td>0.004640</td>\n      <td>101.008001</td>\n      <td>1.0</td>\n      <td>0.121572</td>\n      <td>259.202951</td>\n      <td>1.0</td>\n      <td>0.555751</td>\n    </tr>\n    <tr>\n      <th>2877</th>\n      <td>4</td>\n      <td>66.832707</td>\n      <td>1.5</td>\n      <td>0.312293</td>\n      <td>213.166290</td>\n      <td>1.5</td>\n      <td>0.751208</td>\n      <td>183.526621</td>\n      <td>1.5</td>\n      <td>0.084941</td>\n      <td>156.817236</td>\n      <td>1.5</td>\n      <td>0.187636</td>\n      <td>293.077559</td>\n      <td>1.5</td>\n      <td>0.657235</td>\n    </tr>\n    <tr>\n      <th>9506</th>\n      <td>62</td>\n      <td>199.176836</td>\n      <td>10.0</td>\n      <td>0.288931</td>\n      <td>213.188879</td>\n      <td>1.5</td>\n      <td>0.184611</td>\n      <td>206.624896</td>\n      <td>1.0</td>\n      <td>0.070740</td>\n      <td>73.915249</td>\n      <td>1.0</td>\n      <td>0.314750</td>\n      <td>276.605635</td>\n      <td>1.5</td>\n      <td>0.845614</td>\n    </tr>\n    <tr>\n      <th>7479</th>\n      <td>112</td>\n      <td>327.272292</td>\n      <td>10.0</td>\n      <td>0.289465</td>\n      <td>125.518278</td>\n      <td>1.0</td>\n      <td>0.920706</td>\n      <td>49.262084</td>\n      <td>1.5</td>\n      <td>0.012735</td>\n      <td>288.479819</td>\n      <td>10.0</td>\n      <td>0.186480</td>\n      <td>273.075785</td>\n      <td>1.5</td>\n      <td>0.576559</td>\n    </tr>\n    <tr>\n      <th>1743</th>\n      <td>30</td>\n      <td>86.350369</td>\n      <td>10.0</td>\n      <td>0.335409</td>\n      <td>288.036646</td>\n      <td>10.0</td>\n      <td>0.041854</td>\n      <td>311.295368</td>\n      <td>1.0</td>\n      <td>0.135261</td>\n      <td>251.362939</td>\n      <td>1.0</td>\n      <td>0.144942</td>\n      <td>260.806412</td>\n      <td>1.5</td>\n      <td>0.583583</td>\n    </tr>\n    <tr>\n      <th>7315</th>\n      <td>108</td>\n      <td>146.861837</td>\n      <td>1.0</td>\n      <td>0.148782</td>\n      <td>91.705527</td>\n      <td>1.5</td>\n      <td>0.711324</td>\n      <td>179.084747</td>\n      <td>1.5</td>\n      <td>0.013742</td>\n      <td>99.304109</td>\n      <td>10.0</td>\n      <td>0.143116</td>\n      <td>62.944983</td>\n      <td>1.5</td>\n      <td>0.491779</td>\n    </tr>\n    <tr>\n      <th>1372</th>\n      <td>34</td>\n      <td>252.868765</td>\n      <td>1.5</td>\n      <td>0.262775</td>\n      <td>265.463986</td>\n      <td>1.5</td>\n      <td>0.312144</td>\n      <td>37.171323</td>\n      <td>1.0</td>\n      <td>0.048181</td>\n      <td>106.291560</td>\n      <td>1.0</td>\n      <td>0.699638</td>\n      <td>297.452015</td>\n      <td>10.0</td>\n      <td>0.458814</td>\n    </tr>\n    <tr>\n      <th>7364</th>\n      <td>24</td>\n      <td>58.642644</td>\n      <td>1.0</td>\n      <td>0.037845</td>\n      <td>185.655644</td>\n      <td>1.0</td>\n      <td>0.110597</td>\n      <td>221.863326</td>\n      <td>1.5</td>\n      <td>0.032804</td>\n      <td>184.541291</td>\n      <td>1.0</td>\n      <td>0.101445</td>\n      <td>193.858837</td>\n      <td>1.5</td>\n      <td>0.225699</td>\n    </tr>\n    <tr>\n      <th>289</th>\n      <td>70</td>\n      <td>197.096770</td>\n      <td>10.0</td>\n      <td>0.252586</td>\n      <td>69.331413</td>\n      <td>1.5</td>\n      <td>0.058690</td>\n      <td>212.910460</td>\n      <td>10.0</td>\n      <td>0.060958</td>\n      <td>181.971337</td>\n      <td>10.0</td>\n      <td>0.734759</td>\n      <td>56.513201</td>\n      <td>1.5</td>\n      <td>0.284995</td>\n    </tr>\n    <tr>\n      <th>883</th>\n      <td>83</td>\n      <td>77.130935</td>\n      <td>1.0</td>\n      <td>0.166324</td>\n      <td>281.123280</td>\n      <td>10.0</td>\n      <td>0.184962</td>\n      <td>86.018319</td>\n      <td>10.0</td>\n      <td>0.038257</td>\n      <td>48.134439</td>\n      <td>1.0</td>\n      <td>0.706323</td>\n      <td>153.631194</td>\n      <td>10.0</td>\n      <td>0.371517</td>\n    </tr>\n    <tr>\n      <th>1115</th>\n      <td>53</td>\n      <td>232.342171</td>\n      <td>1.5</td>\n      <td>0.249825</td>\n      <td>321.757109</td>\n      <td>1.0</td>\n      <td>0.301171</td>\n      <td>136.806062</td>\n      <td>10.0</td>\n      <td>0.051209</td>\n      <td>64.039738</td>\n      <td>1.5</td>\n      <td>0.246502</td>\n      <td>182.500865</td>\n      <td>1.0</td>\n      <td>0.182183</td>\n    </tr>\n    <tr>\n      <th>6332</th>\n      <td>8</td>\n      <td>138.049692</td>\n      <td>1.0</td>\n      <td>0.314651</td>\n      <td>52.593727</td>\n      <td>10.0</td>\n      <td>0.055881</td>\n      <td>132.569962</td>\n      <td>10.0</td>\n      <td>0.077455</td>\n      <td>169.000110</td>\n      <td>1.0</td>\n      <td>0.049896</td>\n      <td>236.854187</td>\n      <td>1.5</td>\n      <td>0.387366</td>\n    </tr>\n    <tr>\n      <th>5737</th>\n      <td>70</td>\n      <td>51.803194</td>\n      <td>10.0</td>\n      <td>0.075696</td>\n      <td>242.636258</td>\n      <td>1.0</td>\n      <td>0.131857</td>\n      <td>165.839924</td>\n      <td>1.5</td>\n      <td>0.048100</td>\n      <td>156.404035</td>\n      <td>1.0</td>\n      <td>0.047120</td>\n      <td>31.166800</td>\n      <td>1.5</td>\n      <td>0.254321</td>\n    </tr>\n    <tr>\n      <th>3717</th>\n      <td>21</td>\n      <td>84.614611</td>\n      <td>1.0</td>\n      <td>0.066478</td>\n      <td>217.339972</td>\n      <td>10.0</td>\n      <td>0.127096</td>\n      <td>148.901504</td>\n      <td>1.0</td>\n      <td>0.023936</td>\n      <td>212.096278</td>\n      <td>1.5</td>\n      <td>0.497041</td>\n      <td>316.851747</td>\n      <td>1.5</td>\n      <td>0.602498</td>\n    </tr>\n    <tr>\n      <th>6010</th>\n      <td>107</td>\n      <td>104.599177</td>\n      <td>1.5</td>\n      <td>0.317021</td>\n      <td>275.635281</td>\n      <td>10.0</td>\n      <td>0.314082</td>\n      <td>51.756099</td>\n      <td>10.0</td>\n      <td>0.117578</td>\n      <td>208.009388</td>\n      <td>10.0</td>\n      <td>0.386564</td>\n      <td>94.171545</td>\n      <td>1.5</td>\n      <td>0.163802</td>\n    </tr>\n    <tr>\n      <th>9477</th>\n      <td>26</td>\n      <td>39.641304</td>\n      <td>10.0</td>\n      <td>0.120284</td>\n      <td>221.244279</td>\n      <td>10.0</td>\n      <td>0.841325</td>\n      <td>37.977455</td>\n      <td>1.5</td>\n      <td>0.054879</td>\n      <td>197.420341</td>\n      <td>1.0</td>\n      <td>0.635644</td>\n      <td>228.639747</td>\n      <td>10.0</td>\n      <td>0.423909</td>\n    </tr>\n    <tr>\n      <th>6345</th>\n      <td>60</td>\n      <td>208.979170</td>\n      <td>1.0</td>\n      <td>0.311363</td>\n      <td>152.424017</td>\n      <td>1.0</td>\n      <td>0.060033</td>\n      <td>133.695068</td>\n      <td>1.5</td>\n      <td>0.126220</td>\n      <td>154.049900</td>\n      <td>1.5</td>\n      <td>0.588456</td>\n      <td>270.396117</td>\n      <td>1.0</td>\n      <td>0.498202</td>\n    </tr>\n    <tr>\n      <th>5212</th>\n      <td>4</td>\n      <td>38.894802</td>\n      <td>1.0</td>\n      <td>0.217896</td>\n      <td>305.787260</td>\n      <td>10.0</td>\n      <td>0.861681</td>\n      <td>312.490398</td>\n      <td>10.0</td>\n      <td>0.043868</td>\n      <td>220.829157</td>\n      <td>1.0</td>\n      <td>0.968652</td>\n      <td>95.176427</td>\n      <td>10.0</td>\n      <td>0.881263</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "worst_scenarios = pd.read_pickle(r'generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl')\n",
+    "worst_scenarios.iloc[:,:16]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-14T07:32:15.219679600Z",
+     "start_time": "2023-06-14T07:32:15.155118Z"
     }
    }
   },
@@ -68,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from ema_workbench.em_framework.optimization import (ArchiveLogger,\n",
@@ -103,22 +130,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:29:16.435865200Z",
-     "start_time": "2023-06-13T15:29:16.432847700Z"
+     "end_time": "2023-06-14T07:22:06.635725500Z",
+     "start_time": "2023-06-14T07:22:06.630609200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[MainProcess/INFO] pool started with 12 workers\n",
-      "598it [00:57, 10.35it/s]                                                       \n",
-      "[MainProcess/INFO] optimization completed, found 27 solutions\n",
+      "597it [01:17,  7.69it/s]                                                       \n",
+      "[MainProcess/INFO] optimization completed, found 135 solutions\n",
       "[MainProcess/INFO] terminating pool\n"
      ]
     }
@@ -136,14 +163,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:47.247978900Z",
-     "start_time": "2023-06-13T15:29:16.432847700Z"
+     "end_time": "2023-06-14T07:24:05.250597800Z",
+     "start_time": "2023-06-14T07:22:11.447064800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "with open(r'generated_datasets\\MOEA_results.pkl','wb') as pickle_file:\n",
@@ -152,8 +179,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:47.255603900Z",
-     "start_time": "2023-06-13T15:30:47.249977200Z"
+     "end_time": "2023-06-14T07:24:05.256394500Z",
+     "start_time": "2023-06-14T07:24:05.253601800Z"
     }
    }
   },
