updated death cost

--- a/Final Assignment EPA1361/1_BASECASE_OPEN_EXPLORATION.ipynb
+++ b/Final Assignment EPA1361/1_BASECASE_OPEN_EXPLORATION.ipynb
@@ -270,12 +270,14 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
+    "death_cost_per_person = 6_300_000\n",
+    "\n",
     "# calculate the cost of death so every column has the same unit (€)\n",
-    "outcomes[\"A.1_Deaths_Cost\"]=outcomes[\"A.1_Expected Number of Deaths\"]*2_700_000\n",
-    "outcomes[\"A.2_Deaths_Cost\"]=outcomes[\"A.2_Expected Number of Deaths\"]*2_700_000\n",
-    "outcomes[\"A.3_Deaths_Cost\"]=outcomes[\"A.3_Expected Number of Deaths\"]*2_700_000\n",
-    "outcomes[\"A.4_Deaths_Cost\"]=outcomes[\"A.4_Expected Number of Deaths\"]*2_700_000\n",
-    "outcomes[\"A.5_Deaths_Cost\"]=outcomes[\"A.5_Expected Number of Deaths\"]*2_700_000\n",
+    "outcomes[\"A.1_Deaths_Cost\"]=outcomes[\"A.1_Expected Number of Deaths\"]*death_cost_per_person\n",
+    "outcomes[\"A.2_Deaths_Cost\"]=outcomes[\"A.2_Expected Number of Deaths\"]*death_cost_per_person\n",
+    "outcomes[\"A.3_Deaths_Cost\"]=outcomes[\"A.3_Expected Number of Deaths\"]*death_cost_per_person\n",
+    "outcomes[\"A.4_Deaths_Cost\"]=outcomes[\"A.4_Expected Number of Deaths\"]*death_cost_per_person\n",
+    "outcomes[\"A.5_Deaths_Cost\"]=outcomes[\"A.5_Expected Number of Deaths\"]*death_cost_per_person\n",
     "\n",
     "to_drop = [\"A.1_Expected Number of Deaths\",\"A.2_Expected Number of Deaths\",\"A.3_Expected Number of Deaths\",\"A.4_Expected Number of Deaths\",\"A.5_Expected Number of Deaths\"]\n",
     "\n",
