sumsumsum ook maar weer een fatsoenlijke naam gegeven

--- a/Final Assignment EPA1361/MORO_POGING_TWEE.ipynb
+++ b/Final Assignment EPA1361/MORO_POGING_TWEE.ipynb
@@ -185,7 +185,7 @@
    "execution_count": 29,
    "outputs": [],
    "source": [
-    "def sum_sum_sum(*data):\n",
+    "def robust_sum(*data):\n",
     "    sumsumsum = sum(sum(sum(data)))\n",
     "\n",
     "    mean = np.mean(sumsumsum)\n",
@@ -201,13 +201,13 @@
     "# These functions need to only return one score value...\n",
     "robustness_functions = [\n",
     "    ScalarOutcome('Damage Score', variable_name=var_list_damage,\n",
-    "                  function=sum_sum_sum, kind=minimize, expected_range=(0, 4e16)),\n",
+    "                  function=robust_sum, kind=minimize, expected_range=(0, 4e16)),\n",
     "    ScalarOutcome('Deaths Score', variable_name=var_list_deaths,\n",
-    "                  function=sum_sum_sum, kind=minimize, expected_range=(0, 8.5e19)),\n",
+    "                  function=robust_sum, kind=minimize, expected_range=(0, 8.5e19)),\n",
     "    ScalarOutcome('Dike Invest Score', variable_name=var_list_dike,\n",
-    "                  function=sum_sum_sum, kind=minimize, expected_range=(1e18, 1.3e7)),\n",
-    "    ScalarOutcome(\"RfR Invest Score\", kind=minimize, variable_name=\"RfR Total Costs\", function=sum_sum_sum),\n",
-    "    ScalarOutcome(\"Evac Score\", kind=minimize, variable_name=\"Expected Evacuation Costs\", function=sum_sum_sum),\n",
+    "                  function=robust_sum, kind=minimize, expected_range=(1e18, 1.3e7)),\n",
+    "    ScalarOutcome(\"RfR Invest Score\", kind=minimize, variable_name=\"RfR Total Costs\", function=robust_sum),\n",
+    "    ScalarOutcome(\"Evac Score\", kind=minimize, variable_name=\"Expected Evacuation Costs\", function=robust_sum),\n",
     "]\n",
     "\n",
     "# constraints = [\n",
