--- a/Final Assignment EPA1361/1_BASECASE_OPEN_EXPLORATION.ipynb
+++ b/Final Assignment EPA1361/1_BASECASE_OPEN_EXPLORATION.ipynb
@@ -400,7 +400,16 @@
     "                              results['A.2_Deaths_Cost'] + \\\n",
     "                              results['A.3_Deaths_Cost'] + \\\n",
     "                              results['A.4_Deaths_Cost'] + \\\n",
-    "                              results['A.5_Deaths_Cost']"
+    "                              results['A.5_Deaths_Cost']\n",
+    "\n",
+    "total_values['Expected_Annual_Damage_Overijssel'] = results['A.4_Expected Annual Damage'] + \\\n",
+    "                                                    results['A.5_Expected Annual Damage']\n",
+    "\n",
+    "total_values['Dike_Investment_Costs_Overijssel'] = results['A.4_Dike Investment Costs'] + \\\n",
+    "                                                   results['A.5_Dike Investment Costs']\n",
+    "\n",
+    "total_values['Deaths_Cost_Overijssel'] = results['A.4_Deaths_Cost'] + \\\n",
+    "                                         results['A.5_Deaths_Cost']"
    ],
    "metadata": {
     "collapsed": false,
