--- a/Final Assignment EPA1361/MORO_POGING_TWEE.ipynb
+++ b/Final Assignment EPA1361/MORO_POGING_TWEE.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "open_exploration_results = pd.read_pickle(r'generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl')"
@@ -126,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T11:50:47.750962600Z",
-     "start_time": "2023-06-16T11:50:47.750962600Z"
+     "end_time": "2023-06-16T13:08:43.485287600Z",
+     "start_time": "2023-06-16T13:08:43.453638500Z"
     }
    }
   },
@@ -146,21 +146,9 @@
    "outputs": [],
    "source": [
     "# List the names of vars to make `robustness_functions` a bit more read-able\n",
-    "var_list_damage = ['A.1_Expected Annual Damage',\n",
-    "                   'A.2_Expected Annual Damage',\n",
-    "                   'A.3_Expected Annual Damage',\n",
-    "                   'A.4_Expected Annual Damage',\n",
-    "                   'A.5_Expected Annual Damage',]\n",
-    "var_list_deaths = ['A.1_Expected Number of Deaths',\n",
-    "                   'A.2_Expected Number of Deaths',\n",
-    "                   'A.3_Expected Number of Deaths',\n",
-    "                   'A.4_Expected Number of Deaths',\n",
-    "                   'A.5_Expected Number of Deaths',]\n",
-    "var_list_dike = ['A.1_Dike Investment Costs',\n",
-    "                 'A.2_Dike Investment Costs',\n",
-    "                 'A.3_Dike Investment Costs',\n",
-    "                 'A.4_Dike Investment Costs',\n",
-    "                 'A.5_Dike Investment Costs',]\n",
+    "damage_overijssel = ['A.4_Expected Annual Damage', 'A.5_Expected Annual Damage',]\n",
+    "deaths_overijssel = ['A.4_Expected Number of Deaths', 'A.5_Expected Number of Deaths',]\n",
+    "dike_investments_overijssel = ['A.4_Dike Investment Costs', 'A.5_Dike Investment Costs',]\n",
     "var_list_rfr = ['RfR Total Costs',]\n",
     "var_list_evac = ['Expected Evacuation Costs',]"
    ],
@@ -187,13 +175,14 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
+    "# Mean square deviation\n",
+    "\n",
     "def robust_sum(*data):\n",
     "    sumsumsum = sum(sum(sum(data)))\n",
     "\n",
-    "    # we moeten nog een bron vinden waarom we deze metric gebruiken!\n",
     "    mean = np.mean(sumsumsum)\n",
-    "    iqr = sp.stats.iqr(sumsumsum) + mean * 0.001\n",
-    "    result = mean + iqr\n",
+    "    iqr = sp.stats.iqr(sumsumsum) # + mean * 0.001\n",
+    "    result = np.square(mean) + np.square(iqr)\n",
     "\n",
     "    return result"
    ],
@@ -225,17 +214,17 @@
     "\n",
     "robustness_functions = [\n",
     "    ScalarOutcome('Damage Cost',\n",
-    "                  variable_name=var_list_damage,\n",
+    "                  variable_name=damage_overijssel,\n",
     "                  function=robust_sum,\n",
     "                  kind=minimize,\n",
     "                  ),\n",
     "    ScalarOutcome('Deaths Score',\n",
-    "                  variable_name=var_list_deaths,\n",
+    "                  variable_name=deaths_overijssel,\n",
     "                  function=robust_sum,\n",
     "                  kind=minimize,\n",
     "                  ),\n",
     "    ScalarOutcome('Dike Invest Cost',\n",
-    "                  variable_name=var_list_dike,\n",
+    "                  variable_name=dike_investments_overijssel,\n",
     "                  function=robust_sum,\n",
     "                  kind=minimize,\n",
     "                  ),\n",
@@ -347,7 +336,7 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "Then, the model can be run. Results are saved."
+    "Then, the model can be run. Results (pareto set of policies) are saved."
    ],
    "metadata": {
     "collapsed": false
@@ -377,7 +366,6 @@
     "                                                     epsilons=epsilons,\n",
     "                                                     convergence=convergence_metrics,\n",
     "                                                     population_size=5,\n",
-    "                                                     uncertainty_sampling=Samplers.LHS\n",
     "                                                     )\n",
     "\n",
     "with open(r'generated_datasets/initial_Pareto_policies_test.pkl', 'wb') as file_pi:\n",
