--- a/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
@@ -76,7 +76,7 @@
     "|          RfR Invest Cost       |       \tMinimize       |\n",
     "|          \tEvacuation Cost        |       \tMinimize       |\n",
     "\n",
-    "Robustness score calculation:"
+    "Robustness score calculation: $ MSD = \\sigma ^{2} + \\mu ^{2} $"
    ],
    "metadata": {
     "collapsed": false
