--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -3,6 +3,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "In step three, the XLRM specification is used to build a diverse ensemble of possible future states ofthe world (SOWs), or scenarios, that span the uncertainty space specified in the first step. The set offuture SOWs are used to determine how the defined policies may react to a wide variety of possiblefutures. This stage generally involves the use of software to both build the ensemble of scenariosandto apply that ensembleto the set ofpolicy options to build adata set that evaluatesthe potentialeffectiveness of a policy given the XLRM problem definition."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Import"
    ],
    "metadata": {
@@ -269,16 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "outputs": [],
    "source": [
-    "experiments_and_results = pd.concat([experiments,policies_all_scenarios], axis=1)"
+    "experiments_and_results = pd.concat([experiments,policies_all_scenarios], axis=1)\n",
+    "\n",
+    "with open(r'../generated_datasets/policy_uncertainty_experiments_results.pkl', 'wb') as file_pi:\n",
+    "    pickle.dump(experiments_and_results, file_pi)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:51:36.727810100Z",
-     "start_time": "2023-06-16T14:51:36.705474200Z"
+     "end_time": "2023-06-16T15:44:34.714776700Z",
+     "start_time": "2023-06-16T15:44:34.704824600Z"
     }
    }
   },
@@ -342,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "aggregated_outcomes = pd.concat([experiments[['scenario','policy']],policies_all_scenarios.iloc[:,-5:]], axis=1)\n",
@@ -350,13 +362,16 @@
     "stats_df = pd.DataFrame()\n",
     "for column in aggregated_outcomes.iloc[:,2:].columns:\n",
     "    stats_df[column + ' mean'] = aggregated_outcomes.groupby('policy').agg({column:['mean']})\n",
-    "    stats_df[column + ' std'] = aggregated_outcomes.groupby('policy').agg({column:['std']})"
+    "    stats_df[column + ' std'] = aggregated_outcomes.groupby('policy').agg({column:['std']})\n",
+    "\n",
+    "with open(r'../generated_datasets/policy_uncertainty_aggregated.pkl', 'wb') as file_pi:\n",
+    "    pickle.dump(aggregated_outcomes, file_pi)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:51:43.156770100Z",
-     "start_time": "2023-06-16T14:51:43.117961500Z"
+     "end_time": "2023-06-16T15:40:46.549221500Z",
+     "start_time": "2023-06-16T15:40:46.487311800Z"
     }
    }
   },
@@ -418,27 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "outputs": [],
    "source": [
-    "aggregated_outcomes_provinces = pd.concat([experiments[['scenario','policy']],provinces.iloc[:,-10:]], axis=1)"
+    "aggregated_outcomes_provinces = pd.concat([experiments[['scenario','policy']],provinces.iloc[:,-10:]], axis=1)\n",
+    "\n",
+    "with open(r'../generated_datasets/policy_uncertainty_provinces.pkl', 'wb') as file_pi:\n",
+    "    pickle.dump(aggregated_outcomes_provinces, file_pi)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:55:38.944019900Z",
-     "start_time": "2023-06-16T14:55:38.907388400Z"
+     "end_time": "2023-06-16T15:40:49.165738900Z",
+     "start_time": "2023-06-16T15:40:49.149651600Z"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Calculate Robustness Metrics\n",
-    "MOET NOG"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
