--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -162,7 +162,7 @@
    "execution_count": 6,
    "outputs": [],
    "source": [
-    "n_scenarios = 50 # maak 10.000"
+    "n_scenarios = int(1e5) # maak 10.000"
    ],
    "metadata": {
     "collapsed": false,
