uncertainty analysis run

--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -21,7 +21,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\EPA\\Advanced_simulation\\EPA1361_Model-based_Decision-making\\Lib\\site-packages\\ema_workbench\\analysis\\prim.py:30: ImportWarning: altair based interactive inspection not available\n",
+      "  warnings.warn((\"altair based interactive \" \"inspection not available\"), ImportWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#   import packages\n",
     "import numpy as np\n",
@@ -57,8 +66,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:46:48.654899500Z",
-     "start_time": "2023-06-16T14:46:45.856950500Z"
+     "end_time": "2023-06-19T07:41:30.234882400Z",
+     "start_time": "2023-06-19T07:41:24.103573500Z"
     }
    }
   },
@@ -91,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:46:50.927203Z",
-     "start_time": "2023-06-16T14:46:49.955779300Z"
+     "end_time": "2023-06-19T07:41:31.090222600Z",
+     "start_time": "2023-06-19T07:41:30.233882100Z"
     }
    }
   },
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "pareto_policies = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')"
@@ -115,8 +124,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:46:58.705089100Z",
-     "start_time": "2023-06-16T14:46:58.673350300Z"
+     "end_time": "2023-06-19T07:41:31.091222700Z",
+     "start_time": "2023-06-19T07:41:31.089225100Z"
     }
    }
   },
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "policies = []\n",
@@ -143,8 +152,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:47:00.293798800Z",
-     "start_time": "2023-06-16T14:47:00.278112900Z"
+     "end_time": "2023-06-19T07:41:31.204538500Z",
+     "start_time": "2023-06-19T07:41:31.092217Z"
     }
    }
   },
@@ -159,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "n_scenarios = int(1e5) # maak 10.000"
+    "n_scenarios = int(1000)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:47:01.667263500Z",
-     "start_time": "2023-06-16T14:47:01.650794500Z"
+     "end_time": "2023-06-19T07:41:31.224530300Z",
+     "start_time": "2023-06-19T07:41:31.126054500Z"
     }
    }
   },
@@ -183,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[MainProcess/INFO] pool started with 12 workers\n",
-      "[MainProcess/INFO] performing 50 scenarios * 9 policies * 1 model(s) = 450 experiments\n",
-      "100%|████████████████████████████████████████| 450/450 [00:46<00:00,  9.72it/s]\n",
+      "[MainProcess/INFO] performing 1000 scenarios * 67 policies * 1 model(s) = 67000 experiments\n",
+      "100%|██████████████████████████████████| 67000/67000 [1:37:56<00:00, 11.40it/s]\n",
       "[MainProcess/INFO] experiments finished\n",
       "[MainProcess/INFO] terminating pool\n"
      ]
@@ -210,8 +219,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:48:45.482037Z",
-     "start_time": "2023-06-16T14:47:25.746655600Z"
+     "end_time": "2023-06-19T09:20:15.529062700Z",
+     "start_time": "2023-06-19T07:41:31.129562500Z"
     }
    }
   },
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "scenario_results = pd.read_pickle(r'../generated_datasets/policy_uncertainty_test.pkl')\n",
@@ -235,8 +244,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:51:33.303187100Z",
-     "start_time": "2023-06-16T14:51:33.287457600Z"
+     "end_time": "2023-06-19T09:20:15.566701600Z",
+     "start_time": "2023-06-19T09:20:15.531058Z"
     }
    }
   },
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "policies_all_scenarios = pd.DataFrame()\n",
@@ -262,8 +271,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:51:35.424256700Z",
-     "start_time": "2023-06-16T14:51:35.387127Z"
+     "end_time": "2023-06-19T09:20:15.695873Z",
+     "start_time": "2023-06-19T09:20:15.556529100Z"
     }
    }
   },
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "experiments_and_results = pd.concat([experiments,policies_all_scenarios], axis=1)\n",
@@ -289,8 +298,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T15:44:34.714776700Z",
-     "start_time": "2023-06-16T15:44:34.704824600Z"
+     "end_time": "2023-06-19T09:20:15.795864300Z",
+     "start_time": "2023-06-19T09:20:15.685633200Z"
     }
    }
   },
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def combine_columns(dataframe, name):\n",
@@ -319,14 +328,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:51:38.211982500Z",
-     "start_time": "2023-06-16T14:51:38.193303400Z"
+     "end_time": "2023-06-19T09:20:15.800994300Z",
+     "start_time": "2023-06-19T09:20:15.797862300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "combine_columns(policies_all_scenarios, 'Expected Annual Damage')\n",
@@ -338,8 +347,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:51:40.529170900Z",
-     "start_time": "2023-06-16T14:51:40.497253700Z"
+     "end_time": "2023-06-19T09:20:15.895171700Z",
+     "start_time": "2023-06-19T09:20:15.801994400Z"
     }
    }
   },
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "aggregated_outcomes = pd.concat([experiments[['scenario','policy']],policies_all_scenarios.iloc[:,-5:]], axis=1)\n",
@@ -370,8 +379,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T15:40:46.549221500Z",
-     "start_time": "2023-06-16T15:40:46.487311800Z"
+     "end_time": "2023-06-19T09:20:15.957636600Z",
+     "start_time": "2023-06-19T09:20:15.899183500Z"
     }
    }
   },
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def combine_columns_province(dataframe, name):\n",
@@ -405,14 +414,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:55:37.447714900Z",
-     "start_time": "2023-06-16T14:55:37.428415600Z"
+     "end_time": "2023-06-19T09:20:15.964773300Z",
+     "start_time": "2023-06-19T09:20:15.961111300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "provinces = policies_all_scenarios.copy()\n",
@@ -426,14 +435,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T14:55:38.534086200Z",
-     "start_time": "2023-06-16T14:55:38.509032400Z"
+     "end_time": "2023-06-19T09:20:16.089558500Z",
+     "start_time": "2023-06-19T09:20:15.964773300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "aggregated_outcomes_provinces = pd.concat([experiments[['scenario','policy']],provinces.iloc[:,-10:]], axis=1)\n",
@@ -444,18 +453,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-16T15:40:49.165738900Z",
-     "start_time": "2023-06-16T15:40:49.149651600Z"
+     "end_time": "2023-06-19T09:20:16.148634700Z",
+     "start_time": "2023-06-19T09:20:16.090558700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-19T09:20:16.148634700Z",
+     "start_time": "2023-06-19T09:20:16.125776700Z"
+    }
    }
   }
  ],
